Bug 500428 - Unusual placement of overlay icons
Summary: Unusual placement of overlay icons
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: git-master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-19 18:38 UTC by Luke Horwell
Modified: 2025-03-01 12:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of Dolphin 25.03.70 (git) with offset icons (393.62 KB, image/png)
2025-02-19 18:38 UTC, Luke Horwell
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke Horwell 2025-02-19 18:38:51 UTC
Created attachment 178604 [details]
Screenshot of Dolphin 25.03.70 (git) with offset icons

SUMMARY

Since the overlay icons were refactored (previously causing regressions like BUG 497372 and BUG 498211). Visually, there is still a regression with the placement of overlay icons being positioned away from the icon instead of actually being overlaid. This looks unusual coming from other file managers / OS and presents a jarring feeling scanning a folder with icon states (e.g. read only, symlinks, VCS status)


STEPS TO REPRODUCE
1. Browse to a folder containing overlay icons (symlinks, or root filesystem)
2. Observe icons under an Icon view mode.

OBSERVED RESULT
Overlay icons are offset to the side.

EXPECTED RESULT
Overlay icons actually overlaid on top of an icon.


SOFTWARE/OS VERSIONS
Arch Linux
KDE Plasma: 6.3.1
KDE Frameworks Version: 6.11.0
Qt Version: 6.8.2

ADDITIONAL INFORMATION
The change was introduced in https://invent.kde.org/system/dolphin/-/merge_requests/889, which had passed one approval of this change. I appreciate the fact it might have been a challenge to get it right with varying icon sizes.

As a workaround, stick with Dolphin 24.08.3 before the overlays started changing.
Comment 1 Luke Horwell 2025-02-22 12:34:26 UTC
Affects git-master only, not 24.12.2, my mistake. Might have been mentioned here: https://invent.kde.org/system/dolphin/-/merge_requests/912

> One think master could improve is the position of the overlay icon with small sizes, I think we can do something.
Comment 2 Méven Car 2025-02-22 18:54:26 UTC
Fixing this will reintroduce https://bugs.kde.org/show_bug.cgi?id=497372 currently.

The overlay size depend on the icon/preview being shown as of now.
The preview fix made it so all icon/preview had the same size, hence the gap between the overlay and the icon/preview.
Comment 3 Bug Janitor Service 2025-02-23 13:05:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/917
Comment 4 Méven 2025-03-01 12:52:33 UTC
Git commit e4786b4e7ae03e1f67762c38635f08df958e97d4 by Méven Car.
Committed on 01/03/2025 at 10:03.
Pushed by meven into branch 'master'.

kstandarditemlistwidget: make overlay icons independant of preview size

This consists in replacing the use of KIconUtils::addOverlay to custom
adapted function, based on KIconLoader::global()->drawOverlays previous
behavior.

M  +60   -10   src/kitemviews/kstandarditemlistwidget.cpp

https://invent.kde.org/system/dolphin/-/commit/e4786b4e7ae03e1f67762c38635f08df958e97d4