kstandarditemlistwidget: make overlay icons independant of preview size

This consists in replacing the use of KIconUtils::addOverlay to custom
adapted function, based on KIconLoader::global()->drawOverlays previous
behavior.

BUG: 500428